dnsconf.yml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-tutorial # This can be anything you want.
