namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-app # This can be anything you want.
