ingressresource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-website-ingress
spec:
  rules:
  - host: mywebsite.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-website-service
            port:
              number: 80
